vssk idle sway fix. add back fixed ado scope. remove juan guns for compat

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
@@ -930,7 +930,8 @@ item_visual                              = dynamics\weapons\wpn_svds_pmc\wpn_svd
         aim_hud_offset_rot_16x9          = -0.004315, -0.003782, 0
 ;==============================================================================
 ![wpn_vssk]
->scopes						 = gauss_sight, leupold, marchf, ps320, razorhd
+>scopes						 = gauss_sight, leupold, marchf, ps320, razorhd, ado
+
 lewd_lens_hide_enabled       = true	
 lewd_lens_hide_bone          = scope
 lewd_lens_hide_delays        = 0.1,0
@@ -940,6 +941,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_pos_16x9          = -0.068319, 0.015768, -0.093838
         aim_hud_offset_rot               = 0.003369, 0.002838, 0
         aim_hud_offset_rot_16x9          = 0.003369, 0.002838, 0
+
+    anm_idle_aim                	     = barry_idle_vssk_hands, idle, 0.000000000000001
+    anm_idle_aim_moving         	     = barry_idle_vssk_hands, idle, 0.000000000000001
+    anm_idle_aim_moving_crouch  	     = barry_idle_vssk_hands, idle, 0.000000000000001
 		
 ![wpn_vssk_cortex]		
         scope_zoom_factor                = 12
@@ -1107,6 +1112,11 @@ lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = scope
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false
+![wpn_svu]
+anm_idle_aim                             = barry_idle_aim_svu_hands, barry_idle_aim_svu, 0.000000000000001
+anm_idle_aim_moving                      = barry_idle_aim_svu_hands, barry_idle_aim_moving_svu, 0.000000000000001
+anm_idle_aim_moving_crouch               = barry_idle_aim_svu_hands, barry_idle_aim_moving_svu, 0.000000000000001
+
 ![wpn_svu_1p29]
         scope_zoom_factor                = 30
         scope_texture                    =	
@@ -1684,382 +1694,6 @@ zoom_step_count=1
         aim_hud_offset_pos_16x9          = -0.060977, 0.003068, -0.008205
         aim_hud_offset_rot               = -0.0041, -0.029438, 0
         aim_hud_offset_rot_16x9          = -0.0041, -0.029438, 0
-;==============================================================================		
-![wpn_marlin_tracker]
->scopes			= gee36
-
-lewd_lens_hide_enabled       = true	
-lewd_lens_hide_bone          = lens
-lewd_lens_hide_delays        = 0.1,0
-lewd_lens_hide_aim_mode      = true, false, false
-
-![wpn_marlin_tracker_acog]
-        scope_zoom_factor                = 42.86
-		scope_texture                    =
-![wpn_marlin_tracker_acog_hud]
-        aim_hud_offset_pos               = -0.05329, -0.010181, -0.145677
-        aim_hud_offset_pos_16x9          = -0.05329, -0.010181, -0.145677
-        aim_hud_offset_rot               = 0.02702, 0.011488, 0.00782
-        aim_hud_offset_rot_16x9          = 0.02702, 0.011488, 0.00782
 		
-![wpn_marlin_tracker_triji]
-        scope_zoom_factor                = 42.86
-		scope_texture                    =
-![wpn_marlin_tracker_triji_hud]
-        aim_hud_offset_pos               = -0.05329, -0.010181, -0.145677
-        aim_hud_offset_pos_16x9          = -0.05329, -0.010181, -0.145677
-        aim_hud_offset_rot               = 0.02702, 0.011488, 0.00782
-        aim_hud_offset_rot_16x9          = 0.02702, 0.011488, 0.00782
-		
-        aim_hud_offset_alt_pos           = -0.054378, -0.042602, -0.100166
-        aim_hud_offset_alt_pos_16x9      = -0.054378, -0.042602, -0.100166
-        aim_hud_offset_alt_rot           = 0.021783, 0.016227, 0
-        aim_hud_offset_alt_rot_16x9      = 0.021783, 0.016227, 0
-		
-![wpn_marlin_tracker_specter]
-zoom_step_count=1
-        scope_zoom_factor                = 30
-        scope_texture                    =
-		scope_dynamic_zoom               = on
-![wpn_marlin_tracker_specter_hud]
-        aim_hud_offset_alt_pos           = -0.054378, -0.042602, -0.091143
-        aim_hud_offset_alt_pos_16x9      = -0.054378, -0.042602, -0.091143
-        aim_hud_offset_alt_rot           = 0.021783, 0.016227, 0
-        aim_hud_offset_alt_rot_16x9      = 0.021783, 0.016227, 0
-		
-        aim_hud_offset_pos               = -0.053013, -0.011619, -0.092563
-        aim_hud_offset_pos_16x9          = -0.053013, -0.011619, -0.092563
-        aim_hud_offset_rot               = 0.020462, 0.011365, 0.00782
-        aim_hud_offset_rot_16x9          = 0.020462, 0.011365, 0.00782
-		
-![wpn_marlin_tracker_spec_alt]
-zoom_step_count=1
-        scope_zoom_factor                = 30
-        scope_texture                    =
-		scope_dynamic_zoom               = on
-![wpn_marlin_tracker_spec_alt_hud]
-        aim_hud_offset_alt_pos           = -0.088507, -0.034646, 0.019766
-        aim_hud_offset_alt_pos_16x9      = -0.088507, -0.034646, 0.019766
-        aim_hud_offset_alt_rot           = 0.008105, 0.02245, 0.39801
-        aim_hud_offset_alt_rot_16x9      = 0.008105, 0.02245, 0.39801
-		
-        aim_hud_offset_pos               = -0.053013, -0.011619, -0.092563
-        aim_hud_offset_pos_16x9          = -0.053013, -0.011619, -0.092563
-        aim_hud_offset_rot               = 0.020462, 0.011365, 0.00782
-        aim_hud_offset_rot_16x9          = 0.020462, 0.011365, 0.00782
-		
-![wpn_marlin_tracker_leupold]
-        scope_zoom_factor                = 15
-		scope_texture                    =
-		scope_dynamic_zoom               = on
-![wpn_marlin_tracker_leupold_hud]
-        aim_hud_offset_pos               = -0.053232, -0.011652, -0.082869
-        aim_hud_offset_pos_16x9          = -0.053232, -0.011652, -0.082869
-        aim_hud_offset_rot               = 0.020661, 0.011298, 0.00782
-        aim_hud_offset_rot_16x9          = 0.020661, 0.011298, 0.00782
-		
-![wpn_marlin_tracker_mark8_rmr]
-        scope_zoom_factor                = 15
-		scope_texture                    =
-		scope_dynamic_zoom               = on
-![wpn_marlin_tracker_mark8_rmr_hud]
-        aim_hud_offset_pos               = -0.053232, -0.011652, -0.082869
-        aim_hud_offset_pos_16x9          = -0.053232, -0.011652, -0.082869
-        aim_hud_offset_rot               = 0.020661, 0.011298, 0.00782
-        aim_hud_offset_rot_16x9          = 0.020661, 0.011298, 0.00782
-		
-        aim_hud_offset_alt_pos           = -0.088507, -0.034646, 0.019766
-        aim_hud_offset_alt_pos_16x9      = -0.088507, -0.034646, 0.019766
-        aim_hud_offset_alt_rot           = 0.008105, 0.02245, 0.39801
-        aim_hud_offset_alt_rot_16x9      = 0.008105, 0.02245, 0.39801
-		
-![wpn_marlin_tracker_pn23]
-        scope_zoom_factor                = 20
-        scope_texture                    =
-		nv_scope_status 				 = 0
-		scope_dynamic_zoom               = on
-![wpn_marlin_tracker_pn23_hud]
-        aim_hud_offset_pos               = -0.053073, -0.020387, -0.098125
-        aim_hud_offset_pos_16x9          = -0.053073, -0.020387, -0.098125
-        aim_hud_offset_rot               = 0.02028, 0.011223, 0.00782
-        aim_hud_offset_rot_16x9          = 0.02028, 0.011223, 0.00782
-		
-![wpn_marlin_tracker_gauss_sight]
-        scope_zoom_factor                = 12
-        scope_texture                    =
-		scope_dynamic_zoom               = on
-![wpn_marlin_tracker_gauss_sight_hud]
-        aim_hud_offset_pos               = -0.053151, -0.010455, -0.092026
-        aim_hud_offset_pos_16x9          = -0.053151, -0.010455, -0.092026
-        aim_hud_offset_rot               = 0.020417, 0.011414, 0.00782
-        aim_hud_offset_rot_16x9          = 0.020417, 0.011414, 0.00782
-		
-![wpn_marlin_tracker_marchf]
-        scope_zoom_factor                = 5
-		min_scope_zoom_factor			 = 40
-        scope_texture                    =
-		scope_dynamic_zoom               = on
-![wpn_marlin_tracker_marchf_hud]
-        aim_hud_offset_pos               = -0.053867, -0.010306, -0.116834
-        aim_hud_offset_pos_16x9          = -0.053867, -0.010306, -0.116834
-        aim_hud_offset_rot               = 0.020612, 0.011589, 0.00782
-        aim_hud_offset_rot_16x9          = 0.020612, 0.011589, 0.00782
-
-;-----------------------------------------------------------------------------------------		
-[wpn_marlin_tracker_gee36]:wpn_marlin_tracker
-hud                  = wpn_marlin_tracker_gee36_hud
-
-1icon_layer				= gee36
-1icon_layer_x			= 118
-1icon_layer_y			= -11
-
-inv_weight             = 4.26
-zoom_rotate_time       = 0.25
-use_alt_aim_hud        = true
-
-scope_status           = 1
-scope_zoom_factor      = 40
-scope_dynamic_zoom     = off
-scope_zoom_factor_alt  = 0
-
-[wpn_marlin_tracker_gee36_hud]:wpn_marlin_tracker_hud
-item_visual                              = anomaly_weapons\wpn_marlin_tracker\wpn_marlin_tracker_gee36_hud.ogf	
-        aim_hud_offset_pos               = -0.053236, -0.014529, -0.121774
-        aim_hud_offset_pos_16x9          = -0.053236, -0.014529, -0.121774
-        aim_hud_offset_rot               = 0.020816, 0.01132, 0.007671
-        aim_hud_offset_rot_16x9          = 0.020816, 0.01132, 0.007671
-		
-;==============================================================================	
-![wpn_win1886]
-scopes 									= side
-lewd_lens_hide_enabled       = true	
-lewd_lens_hide_bone          = lens
-lewd_lens_hide_delays        = 0.1,0
-lewd_lens_hide_aim_mode      = true, false, false
-
-[wpn_win1886_side]:wpn_win1886		
-hud				= wpn_win1886_side_hud
-
-1icon_layer                              = side
-1icon_layer_x                            = 80
-1icon_layer_y                            = -25
-
-		scope_status					 = 1
-		scope_texture					 =		
-		scope_zoom_factor               = 34.3
-		use_alt_aim_hud                  = true
-		
-[wpn_win1886_side_hud]:wpn_win1886_hud
-item_visual                              = anomaly_weapons\wpn_win1886\wpn_win1886_side_hud.ogf
-        aim_hud_offset_pos               = -0.035292, 0.01585, -0.073387
-        aim_hud_offset_pos_16x9          = -0.035292, 0.01585, -0.073387
-        aim_hud_offset_rot               = 0.016768, 0.004711, 0.00782
-        aim_hud_offset_rot_16x9          = 0.016768, 0.004711, 0.00782
-		
-;==============================================================================		
-![wpn_mjolnir]
->scopes			= gee36, gauss_sight
-lewd_lens_hide_enabled       = true	
-lewd_lens_hide_bone          = lens
-lewd_lens_hide_delays        = 0.1,0
-lewd_lens_hide_aim_mode      = true, false, false	
-;	
-![wpn_mjolnir_acog]
-        scope_zoom_factor                = 42.86
-		scope_texture                    =
-![wpn_mjolnir_acog_hud]
-        aim_hud_offset_pos               = -0.061325, 0.013655, -0.103739
-        aim_hud_offset_pos_16x9          = -0.061325, 0.013655, -0.103739
-        aim_hud_offset_rot               = 0.009873, -0.003581, 0
-        aim_hud_offset_rot_16x9          = 0.009873, -0.003581, 0
-		
-![wpn_mjolnir_triji]
-        scope_zoom_factor                = 42.86
-		scope_texture                    =
-![wpn_mjolnir_triji_hud]
-        aim_hud_offset_alt_pos           = -0.080862, -0.050206, -0.052342
-        aim_hud_offset_alt_pos_16x9      = -0.080862, -0.050206, -0.052342
-        aim_hud_offset_alt_rot           = -0.01093, -0.001433, 0.77
-        aim_hud_offset_alt_rot_16x9      = -0.01093, -0.001433, 0.77
-		
-        aim_hud_offset_pos               = -0.061325, 0.013655, -0.103739
-        aim_hud_offset_pos_16x9          = -0.061325, 0.013655, -0.103739
-        aim_hud_offset_rot               = 0.009873, -0.003581, 0
-        aim_hud_offset_rot_16x9          = 0.009873, -0.003581, 0
-		
-![wpn_mjolnir_specter]
-zoom_step_count=1
-        scope_zoom_factor                = 30
-        scope_texture                    =
-		scope_dynamic_zoom               = on
-![wpn_mjolnir_specter_hud]
-        aim_hud_offset_alt_pos           = -0.061804, -0.014176, -0.085027
-        aim_hud_offset_alt_pos_16x9      = -0.061804, -0.014176, -0.085027
-        aim_hud_offset_alt_rot           = 0.00634, 0.000247, 0
-        aim_hud_offset_alt_rot_16x9      = 0.00634, 0.000247, 0
-		
-        aim_hud_offset_pos               = -0.061105, 0.01173, -0.085027
-        aim_hud_offset_pos_16x9          = -0.061105, 0.01173, -0.085027
-        aim_hud_offset_rot               = 0.004443, -0.003763, 0
-        aim_hud_offset_rot_16x9          = 0.004443, -0.003763, 0
-		
-![wpn_mjolnir_spec_alt]
-zoom_step_count=1
-        scope_zoom_factor                = 30
-        scope_texture                    =
-		scope_dynamic_zoom               = on
-![wpn_mjolnir_spec_alt_hud]
-        aim_hud_offset_alt_pos           = -0.080862, -0.050206, -0.052342
-        aim_hud_offset_alt_pos_16x9      = -0.080862, -0.050206, -0.052342
-        aim_hud_offset_alt_rot           = -0.01093, -0.001433, 0.77
-        aim_hud_offset_alt_rot_16x9      = -0.01093, -0.001433, 0.77
-		
-        aim_hud_offset_pos               = -0.061105, 0.01173, -0.085027
-        aim_hud_offset_pos_16x9          = -0.061105, 0.01173, -0.085027
-        aim_hud_offset_rot               = 0.004443, -0.003763, 0
-        aim_hud_offset_rot_16x9          = 0.004443, -0.003763, 0
-		
-![wpn_mjolnir_leupold]
-        scope_zoom_factor                = 15
-		scope_texture                    =
-		scope_dynamic_zoom               = on
-![wpn_mjolnir_leupold_hud]
-        aim_hud_offset_pos               = -0.061243, 0.009842, -0.061062
-        aim_hud_offset_pos_16x9          = -0.061243, 0.009842, -0.061062
-        aim_hud_offset_rot               = 0.004285, -0.003808, 0
-        aim_hud_offset_rot_16x9          = 0.004285, -0.003808, 0
-		
-![wpn_mjolnir_mark8_rmr]
-        scope_zoom_factor                = 15
-		scope_texture                    =
-		scope_dynamic_zoom               = on
-![wpn_mjolnir_mark8_rmr_hud]
-        aim_hud_offset_pos               = -0.061243, 0.009842, -0.061062
-        aim_hud_offset_pos_16x9          = -0.061243, 0.009842, -0.061062
-        aim_hud_offset_rot               = 0.004285, -0.003808, 0
-        aim_hud_offset_rot_16x9          = 0.004285, -0.003808, 0
-		
-        aim_hud_offset_alt_pos           = -0.080862, -0.050206, -0.052342
-        aim_hud_offset_alt_pos_16x9      = -0.080862, -0.050206, -0.052342
-        aim_hud_offset_alt_rot           = -0.01093, -0.001433, 0.77
-        aim_hud_offset_alt_rot_16x9      = -0.01093, -0.001433, 0.77
-		
-![wpn_mjolnir_pn23]
-        scope_zoom_factor                = 20
-        scope_texture                    =
-		nv_scope_status 				 = 0
-		scope_dynamic_zoom               = on
-![wpn_mjolnir_pn23_hud]
-        aim_hud_offset_pos               = -0.060649, 0.000684, -0.112358
-        aim_hud_offset_pos_16x9          = -0.060649, 0.000684, -0.112358
-        aim_hud_offset_rot               = 0.004384, -0.003835, 0
-        aim_hud_offset_rot_16x9          = 0.004384, -0.003835, 0
-		
-![wpn_mjolnir_marchf]
-        scope_zoom_factor                = 5
-		min_scope_zoom_factor			 = 40
-        scope_texture                    =
-		scope_dynamic_zoom               = on
-![wpn_mjolnir_marchf_hud]
-        aim_hud_offset_pos               = -0.061517, 0.011448, -0.048051
-        aim_hud_offset_pos_16x9          = -0.061517, 0.011448, -0.048051
-        aim_hud_offset_rot               = 0.004302, -0.003374, 0
-        aim_hud_offset_rot_16x9          = 0.004302, -0.003374, 0
-
-;----------------------------------------------------------------------------------------			
-[wpn_mjolnir_gauss_sight]:wpn_mjolnir
-hud                 = wpn_mjolnir_gauss_sight_hud
-
-1icon_layer         = gauss_sight
-1icon_layer_x       = 67
-1icon_layer_y       = 4
-
-inv_weight          = 4.95
-zoom_rotate_time    = 0.25
-
-scope_status            = 1
-scope_zoom_factor       = 12
-scope_dynamic_zoom      = on
-
-[wpn_mjolnir_gauss_sight_hud]:wpn_mjolnir_hud
-item_visual                              = anomaly_weapons\wpn_mjolnir\wpn_mjolnir_gauss_hud.ogf
-        aim_hud_offset_pos               = -0.061244, 0.013594, -0.073436
-        aim_hud_offset_pos_16x9          = -0.061244, 0.013594, -0.073436
-        aim_hud_offset_rot               = 0.004092, -0.003502, 0
-        aim_hud_offset_rot_16x9          = 0.004092, -0.003502, 0
-		
-;-----------------------------------------------------------------------------------------				
-[wpn_mjolnir_gee36]:wpn_mjolnir
-hud                     = wpn_mjolnir_gee36_hud
-
-1icon_layer				= gee36
-1icon_layer_x			= 73
-1icon_layer_y			= -6
-
-inv_weight              = 4.26
-zoom_rotate_time        = 0.25
-use_alt_aim_hud         = true
-
-scope_status            = 1
-scope_zoom_factor       = 40
-scope_dynamic_zoom      = off
-scope_zoom_factor_alt   = 0
-
-[wpn_mjolnir_gee36_hud]:wpn_mjolnir_hud
-item_visual                              = anomaly_weapons\wpn_mjolnir\wpn_mjolnir_gee36_hud.ogf	
-        aim_hud_offset_alt_pos           = -0.061582, -0.008179, -0.066719
-        aim_hud_offset_alt_pos_16x9      = -0.061582, -0.008179, -0.066719
-        aim_hud_offset_alt_rot           = 0.000568, 0.000399, 0
-        aim_hud_offset_alt_rot_16x9      = 0.000568, 0.000399, 0
-		
-        aim_hud_offset_pos               = -0.061075, 0.00976, -0.078742
-        aim_hud_offset_pos_16x9          = -0.061075, 0.00976, -0.078742
-        aim_hud_offset_rot               = 0.004293, -0.003621, -0.008708
-        aim_hud_offset_rot_16x9          = 0.004293, -0.003621, -0.008708	
-;==============================================================================	
-![wpn_g43]
-parent_section				 = wpn_g43
-
-scopes                       = wpn_addon_scope_zf4
-scopes_sect                  =
-scope_status                 = 0
-scope_texture                =	
-!scope_zoom_factor           = 30
 
 		
-![wpn_g43_hud]		
-        aim_hud_offset_pos               = -0.12288, 0.037306, -0.018912
-        aim_hud_offset_pos_16x9          = -0.12288, 0.037306, -0.018912
-        aim_hud_offset_rot               = 0.00016, -0.000414, 0
-        aim_hud_offset_rot_16x9          = 0.00016, -0.000414, 0
-		
-[wpn_g43_wpn_addon_scope_zf4]:wpn_g43
-hud                  = wpn_g43_wpn_addon_scope_zf4_hud
- 
-1icon_layer          = wpn_addon_scope_zf4
-1icon_layer_x        = 37
-1icon_layer_y        = -16
-
-zoom_rotate_time      = 0.25
-use_alt_aim_hud       = true
-
-scope_status          = 1
-scope_dynamic_zoom    = off
-scope_zoom_factor     = 30
-
-lewd_lens_hide_enabled       = true
-lewd_lens_hide_bone          = lens
-lewd_lens_hide_delays        = 0.1,0
-lewd_lens_hide_aim_mode      = true, false, false
-[wpn_g43_wpn_addon_scope_zf4_hud]:wpn_g43_hud
-        item_visual                 = anomaly_weapons\wpn_g43\wpn_g43_zf4_hud.ogf
-        aim_hud_offset_pos               = -0.130605, 0.023017, -0.10879
-        aim_hud_offset_pos_16x9          = -0.130605, 0.023017, -0.10879
-        aim_hud_offset_rot               = 0.003513, -0.003521, -0.001071
-        aim_hud_offset_rot_16x9          = 0.003513, -0.003521, -0.001071
-
-        aim_hud_offset_alt_pos               = -0.12288, 0.037306, -0.018912
-        aim_hud_offset_alt_pos_16x9          = -0.12288, 0.037306, -0.018912
-        aim_hud_offset_alt_rot               = 0.00016, -0.000414, 0
-        aim_hud_offset_alt_rot_16x9          = 0.00016, -0.000414, 0				
-;==============================================================================	
