--- a/3D Shader Scopes for GAMMA/gamedata/configs/items/weapons/w_ak105_kits.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/items/weapons/w_ak105_kits.ltx
@@ -256,7 +256,7 @@ shell_bone                		         = wpn_body
 freelook_z_offset_mul					 = 0.5
 
 ;-----------------------------------------------------------------------------------------------------
-[wpn_ak105_swamp]:wpn_ak105_bas
+[wpn_ak105_swamp]:wpn_ak105_dummy
 
 inv_grid_width     = 5
 inv_grid_height    = 2
