--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
@@ -59,13 +59,13 @@
 	s3ds_reticle_size 	= 3.5
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.5	
-	magnification 		= 2.8	
+	
 	
 ![kashtan_rmr]	--1p78gs, 2.8x
 	s3ds_reticle_size 	= 3.5
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.5	
-	magnification 		= 2.8
+
 	
 ![1pn93n2_1gs] --Thermal, 3.7x
 	s3ds_reticle_size 	= 3.5	
@@ -73,7 +73,7 @@
 	s3ds_exit_pupil		= 0.33	
 	s3ds_image_type 	= 2
 	s3ds_reticle_type	= 7	
-	magnification 		= 3.7	
+
 
 ![1p29]	--4x
 	s3ds_reticle_size 	= 3.7
@@ -85,7 +85,7 @@
 	s3ds_reticle_size 	= 3.7
 	s3ds_eye_relief 	= 2.7
 	s3ds_exit_pupil		= 0.24
-	magnification 		= 4			
+
 	
 ![ps01]	--4x
 	s3ds_reticle_size 	= 3.9
@@ -94,7 +94,7 @@
 	s3ds_reticle_type 	= 1	
 	ms_count 			= 2
 	ms_colors 			= scope_black, scope_red
-	magnification 		= 4	
+
 		
 ![pso2]	--4x
 	s3ds_reticle_size 	= 4
@@ -103,7 +103,7 @@
 	s3ds_reticle_type 	= 1
 	ms_count 			= 2
 	ms_colors 			= scope_black, scope_red
-	magnification 		= 4
+
 	
 ![pso1m21] --PS02, 4x
 	s3ds_reticle_size 	= 4
@@ -112,7 +112,7 @@
 	s3ds_reticle_type 	= 1
 	ms_count 			= 2
 	ms_colors 			= scope_black, scope_red
-	magnification 		= 4
+
 	
 ![pritseldob] --PS02, 4x
 	s3ds_reticle_size 	= 4
@@ -121,7 +121,7 @@
 	s3ds_reticle_type 	= 1
 	ms_count 			= 2
 	ms_colors 			= scope_black, scope_red
-	magnification 		= 4	
+
 	
 ![1pn93] --Dynamic, NVG, 4x
  	s3ds_reticle_size 	= 3.3	
@@ -130,13 +130,12 @@
 	s3ds_image_type 	= 1
 	s3ds_reticle_type	= 7	
 	ms_count 			= 2
-	magnification 		= 4	
-    min_magnification	= 1
+
 
 ![pgo7gs] --4x, RPG scope
 	s3ds_reticle_size 	= 10
 	s3ds_eye_relief 	= 2.5
-	magnification 		= 4
+
 	
 ![1p59] --Dynamic, 3x-10x
 	s3ds_reticle_size 	= 4.2
@@ -146,8 +145,7 @@
 	s3ds_reticle_type 	= 5
 	ms_count 			= 2
 	ms_colors 			= scope_black, scope_red
-	magnification 		= 10
-    min_magnification	= 3
+
 	
 ![1p69] --1p59, 3x-10x, picatinny, UNUSED
 	s3ds_reticle_size 	= 4.2
@@ -157,37 +155,37 @@
 	s3ds_reticle_type 	= 5
 	ms_count 			= 2
 	ms_colors 			= scope_black, scope_red
-	magnification 		= 10
-    min_magnification	= 3
+
 	
 ![wpn_addon_scope_pu] 	--3.5x
 	s3ds_reticle_size 	= 2.5
 	s3ds_eye_relief 	= 4
-	magnification 		= 3.5
+
 	
 ![wpn_addon_scope_zf4]	--4x
 	s3ds_reticle_size 	= 3
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.63	
-	magnification 		= 4	
+
 
 ![wpn_addon_scope_g43]	--4x
 	s3ds_reticle_size 	= 3
 	s3ds_eye_relief 	= 3.7
-	magnification 		= 4
+
 	
 ![wpn_addon_scope_po4x34]	--Groza, 4x
 	s3ds_reticle_size 	= 4.2
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.35	
-	magnification 		= 4		
+
+	
 ;----------------------------------PICATINNY/WEST SCOPES---------------------------------
 ![t12]	--Thermal, 1x, 	s3ds_reticle_size should be set per gun to match red dot sight view
 	s3ds_reticle_size 	= 1.8
 	s3ds_image_type 	= 2
 	s3ds_reticle_type 	= 6
 	s3ds_min_zoom_1x	= 1	
-	magnification 		= 1
+
 	
 ![monstrum]	--2x
 	s3ds_reticle_size 	= 3
@@ -196,7 +194,7 @@
 	s3ds_reticle_type 	= 1
 	ms_count 			= 2
 	ms_colors 			= scope_black, scope_red	
-	magnification 		= 2
+
 	
 ![acog]		--2.8x
 	s3ds_reticle_size 	= 3.9
@@ -204,7 +202,7 @@
 	s3ds_exit_pupil		= 0.55	
 	s3ds_chroma_power	= 0.031	
 	s3ds_reticle_type 	= 3
-	magnification 		= 2.8	
+	
 	
 ![triji]	--acog, 2.8x
 	s3ds_reticle_size 	= 3.9
@@ -212,25 +210,26 @@
 	s3ds_exit_pupil		= 0.55	
 	s3ds_chroma_power	= 0.031		
 	s3ds_reticle_type 	= 3
-	magnification 		= 2.8		
+	
 
 ![trihawk]	--3x
 	s3ds_reticle_size 	= 3.2
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.66
 	s3ds_chroma_power	= 0.028
-	magnification 		= 3
+
 	
 ![gee36]	--3x
 	s3ds_reticle_size 	= 3.2
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.65	
-	magnification 		= 3
+
 	
 ![side]	--3.5x
-	s3ds_reticle_size 	= 2.5
-	s3ds_eye_relief 	= 3.85	
-	magnification 		= 3.5
+	s3ds_chroma_power   = 0.1
+    s3ds_exit_pupil     = 0.38
+    s3ds_lens_color     = lens_old_yellow
+
 
 ![vulcan] --NVG, 3.5x
 	s3ds_reticle_size 	= 3	
@@ -240,30 +239,30 @@
 	s3ds_image_type 	= 1
 	s3ds_reticle_type	= 7
 	ms_count 			= 2
-	magnification 		= 3.5	
+
 	
 ![susat]	--4x
 	s3ds_reticle_size 	= 3.7
 	s3ds_eye_relief 	= 2.35
-	magnification 		= 4	
+
 
 ![susatov]	--4x, l85 sight
 	s3ds_reticle_size 	= 3.7
 	s3ds_eye_relief 	= 2.35
-	magnification 		= 4	
+
 	
 ![bravo4]	--4x
 	s3ds_reticle_size 	= 4.1
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.35	
-	magnification 		= 4	
+
 
 ![hamr]	--4x
 	s3ds_reticle_size 	= 4.3
 	s3ds_eye_relief 	= 1.9
 	s3ds_exit_pupil		= 0.35
 	s3ds_chroma_power	= 0.035
-	magnification 		= 4
+
 	
 ![specter] --Dynamic, Rotating Scope, 1x or 4x, zoom_step_count = 1
 	s3ds_reticle_size 	= 6.1
@@ -272,8 +271,7 @@
 	s3ds_reticle_type 	= 4
 	ms_count 			= 3
 	ms_colors			= scope_black, scope_red_dim, scope_red
-	magnification 		= 4	
-    min_magnification	= 1
+
 	
 ![spec_alt] --Dynamic, specter, Rotating Scope, 1x OR 4x, zoom_step_count = 1
 	s3ds_reticle_size 	= 4.5
@@ -282,35 +280,33 @@
 	s3ds_reticle_type 	= 4
 	ms_count 			= 3
 	ms_colors			= scope_black, scope_red_dim, scope_red
-	magnification 		= 4		
-    min_magnification	= 1
+
 	
 ![tac30]	--Dynamic, 1x-4x
 	s3ds_reticle_size 	= 4
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.4
 	s3ds_chroma_power	= 0.04	
-	magnification 		= 4	
-    min_magnification	= 1
+
 	
 ![p4x32] --Not Adjusted                                  		
 	s3ds_reticle_size 	= 4.2
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.35	
-	magnification 		= 4	
+
 	
 ![po4x34] --Picatinny, 4x
 	s3ds_reticle_size 	= 4.2
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.35	
-	magnification 		= 4	
+
 	
 ![uh1_magd] --6x
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 2.4
 	s3ds_chroma_power	= 0	
 	s3ds_reticle_type	= 7		
-	magnification 		= 6
+
 
 ![e0t2_magd]	--6x	
 	s3ds_reticle_size 	= 3.9
@@ -319,7 +315,7 @@
 	s3ds_reticle_type	= 1	
 	ms_count 			= 2
 	ms_colors 			= scope_red, scope_green		
-	magnification 		= 6
+
 
 ![devo]	--1x/6x
 	s3ds_reticle_size 	= 4.6
@@ -329,7 +325,7 @@
 	s3ds_reticle_type 	= 1
 	ms_count 			= 2
 	ms_colors 			= scope_black, scope_red	
-	magnification 		= 6
+
 	
 ![pn23] --Dynamic, NVG, 1x-6x
 	s3ds_reticle_size 	= 4.38	
@@ -338,15 +334,13 @@
 	s3ds_image_type 	= 1
 	s3ds_reticle_type	= 7
 	ms_count 			= 2
-	magnification 		= 6	
-    min_magnification	= 1
+
 	
 ![razorhd] --Dynamic, 1x-6x
 	s3ds_reticle_size 	= 4.1
 	s3ds_eye_relief 	= 2.3
 	s3ds_chroma_power	= 0		
-	magnification 		= 6
-    min_magnification	= 1
+
 	
 ![ps320] --Dynamic, Rotating Scope, 1x OR 6x, zoom_step_count = 1
 	s3ds_reticle_size 	= 4.1
@@ -356,8 +350,7 @@
 	s3ds_reticle_type 	= 4
 	ms_count 			= 3
 	ms_colors			= scope_black, scope_red_dim, scope_red	
-	magnification 		= 6
-    min_magnification	= 1
+
 	
 ;--------------------------------------------------------------
 ;----------------------Sniper Scopes---------------------------	
