--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
@@ -437,8 +437,8 @@ hud				= wpn_winchester1873_side_hud
 item_visual                              = anomaly_weapons\wpn_win1873\wpn_win1873_pu_hud.ogf
         aim_hud_offset_pos               = -0.034026, 0.016049, -0.069393
         aim_hud_offset_pos_16x9          = -0.034026, 0.016049, -0.069393
-        aim_hud_offset_rot               = 0.016981, 0.004437, 0
-        aim_hud_offset_rot_16x9          = 0.016981, 0.004437, 0	
+        aim_hud_offset_rot               = 0.017265, 0.004225, 0
+        aim_hud_offset_rot_16x9          = 0.017265, 0.004225, 0	
         aim_hud_offset_alt_pos               = -0.0579, 0.025033, -0.055185
         aim_hud_offset_alt_pos_16x9          = -0.0579, 0.025033, -0.055185
         aim_hud_offset_alt_rot               = 0.015971, 0.008551, 0.00782
@@ -1112,7 +1112,7 @@ lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = scope
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false
-![wpn_svu]
+![wpn_svu_hud]
 anm_idle_aim                             = barry_idle_aim_svu_hands, barry_idle_aim_svu, 0.000000000000001
 anm_idle_aim_moving                      = barry_idle_aim_svu_hands, barry_idle_aim_moving_svu, 0.000000000000001
 anm_idle_aim_moving_crouch               = barry_idle_aim_svu_hands, barry_idle_aim_moving_svu, 0.000000000000001
