phantom ak sound merge

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_weapon_sounds_wstfg_phant0m.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_weapon_sounds_wstfg_phant0m.ltx
@@ -271,3 +271,23 @@
 ; snd_reload_empty		= weapons\ru556\ru556_reloadempty
 ; snd_reload_misfire      = weapons\ru556\ru556_jam
 ; snd_switch_mode			= weapons\ru556\ru556_firemode
+
+![wpn_ak105_swamp]
+snd_reload                  = weapons\aksu_prince\aksu_tact_reload
+snd_reload_empty            = weapons\aksu_prince\aksu_tact_reload_empty
+snd_reload_misfire          = weapons\aksu_prince\aksu_tact_misfire
+
+snd_switch_mode				= weapons\ak74\ak74_switch_mode_quick
+snd_draw                    = weapons\generic\siber_draw
+snd_holster                 = weapons\generic\siber_holster
+snd_bore                    = weapons\aksu_prince\aksu_tact_boring
+
+![wpn_ak105_shakal]
+snd_reload                  = weapons\aksu_prince\aksu_tact_reload
+snd_reload_empty            = weapons\aksu_prince\aksu_tact_reload_empty
+snd_reload_misfire          = weapons\aksu_prince\aksu_tact_misfire
+
+snd_switch_mode				= weapons\ak74\ak74_switch_mode_quick
+snd_draw                    = weapons\generic\siber_draw
+snd_holster                 = weapons\generic\siber_holster
+snd_bore                    = weapons\aksu_prince\aksu_tact_boring
