--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_dvl_m1.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_dvl_m1.ltx
@@ -1,31 +1,33 @@
-![wpn_dvl10]
+;==============================================================================		
+![wpn_dvl10_m1]
 lewd_lens_hide_enabled       = true		
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false
-![wpn_dvl10_acog]
+![wpn_dvl10_m1_acog]
         scope_zoom_factor                = 42.86
 		scope_texture                    =
-![wpn_dvl10_acog_hud]
+![wpn_dvl10_m1_acog_hud]
         aim_hud_offset_pos               = -0.071827, 0.019477, -0.17208
         aim_hud_offset_pos_16x9          = -0.071827, 0.019477, -0.17208
         aim_hud_offset_rot               = 0.027826, 0.005091, 0
         aim_hud_offset_rot_16x9          = 0.027826, 0.005091, 0
 		
-![wpn_dvl10_leupold]
+![wpn_dvl10_m1_leupold]
         scope_zoom_factor                = 15
 		scope_texture                    =
-![wpn_dvl10_leupold_hud]
+![wpn_dvl10_m1_leupold_hud]
         aim_hud_offset_pos               = -0.071838, 0.005215, -0.085436
         aim_hud_offset_pos_16x9          = -0.071838, 0.005215, -0.085436
         aim_hud_offset_rot               = 0.021735, 0.004982, 0
         aim_hud_offset_rot_16x9          = 0.021735, 0.004982, 0
 		
-![wpn_dvl10_specter]		
+![wpn_dvl10_m1_specter]		
         scope_zoom_factor                = 30
         scope_texture                    =
+		scope_dynamic_zoom               = on
 		zoom_step_count					 = 1
-![wpn_dvl10_specter_hud]
+![wpn_dvl10_m1_specter_hud]
         aim_hud_offset_alt_pos           = -0.072615, -0.007844, -0.162654
         aim_hud_offset_alt_pos_16x9      = -0.072615, -0.007844, -0.162654
         aim_hud_offset_alt_rot           = 0.023812, 0.009532, 0
@@ -35,20 +37,20 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot               = 0.021641, 0.005019, 0
         aim_hud_offset_rot_16x9          = 0.021641, 0.005019, 0
 		
-![wpn_dvl10_marchf]
+![wpn_dvl10_m1_marchf]
         scope_zoom_factor                = 5
 		min_scope_zoom_factor			 = 40
         scope_texture                    =
-![wpn_dvl10_marchf_hud]		
+![wpn_dvl10_m1_marchf_hud]		
         aim_hud_offset_pos               = -0.071557, 0.00965, -0.156168
         aim_hud_offset_pos_16x9          = -0.071557, 0.00965, -0.156168
         aim_hud_offset_rot               = 0.021665, 0.005343, 0
         aim_hud_offset_rot_16x9          = 0.021665, 0.005343, 0
 		
-![wpn_dvl10_susat]
+![wpn_dvl10_m1_susat]
         scope_zoom_factor                = 30
         scope_texture                    =
-![wpn_dvl10_susat_hud]		
+![wpn_dvl10_m1_susat_hud]		
         aim_hud_offset_alt_pos           = -0.073047, -0.012689, -0.15954
         aim_hud_offset_alt_pos_16x9      = -0.073047, -0.012689, -0.15954
         aim_hud_offset_alt_rot           = 0.02567, 0.010134, 0
@@ -58,21 +60,21 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot               = 0.020596, 0.005284, 0
         aim_hud_offset_rot_16x9          = 0.020596, 0.005284, 0
 		
-![wpn_dvl10_gauss_sight]
+![wpn_dvl10_m1_gauss_sight]
         scope_zoom_factor                = 12
         scope_texture                    =
-![wpn_dvl10_gauss_sight_hud]		
+![wpn_dvl10_m1_gauss_sight_hud]		
         aim_hud_offset_pos               = -0.071608, 0.017743, -0.174046
         aim_hud_offset_pos_16x9          = -0.071608, 0.017743, -0.174046
         aim_hud_offset_rot               = 0.021848, 0.00514, 0
         aim_hud_offset_rot_16x9          = 0.021848, 0.00514, 0
 		
-![wpn_dvl10_pn23]
+![wpn_dvl10_m1_pn23]
         scope_zoom_factor                = 20
         scope_texture                    =
 		nv_scope_status 				 = 0
 		scope_dynamic_zoom               = on		
-![wpn_dvl10_pn23_hud]
+![wpn_dvl10_m1_pn23_hud]
         aim_hud_offset_pos               = -0.071813, 0.003492, -0.09961
         aim_hud_offset_pos_16x9          = -0.071813, 0.003492, -0.09961
         aim_hud_offset_rot               = 0.020928, 0.004735, 0
