--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_groza.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_groza.ltx
@@ -23,6 +23,10 @@ lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = scope1
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false	
+
+	s3ds_reticle_size = 4
+	s3ds_eye_relief = 4
+	s3ds_exit_pupil = 0.3
 	
 ![wpn_groza_nimble_pn23]
 scope_zoom_factor                = 20
@@ -33,9 +37,6 @@ nv_scope_status 				 = 0
 	s3ds_reticle_size 	= 4.38	
 	s3ds_eye_relief 	= 1.98
 	s3ds_chroma_power	= 0.05	
-	s3ds_image_type 	= 1
-	ms_count 			= 2
-	magnification 		= 6	
 
 ![wpn_groza_nimble_pn23_hud]		
         aim_hud_offset_pos               = 0.012654, -0.021527, 0.010915
@@ -48,13 +49,9 @@ zoom_step_count=1
 scope_zoom_factor       = 30
 scope_texture           =
 
-	s3ds_reticle_size 	= 4.5
+	s3ds_reticle_size 	= 6.1
 	s3ds_eye_relief 	= 2
 	s3ds_chroma_power	= 0.04	
-	s3ds_reticle_type 	= 4
-	ms_count 			= 3
-	ms_colors			= scope_black, scope_red_dim, scope_red
-	magnification 		= 4
 
 ![wpn_groza_nimble_specter_hud]
         aim_hud_offset_pos               = 0.013099, -0.009886, -0.034333
@@ -69,9 +66,6 @@ scope_texture                    =
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 1.5
 	s3ds_exit_pupil		= 0.55	
-	s3ds_chroma_power	= 0.031	
-	s3ds_reticle_type 	= 0
-	magnification 		= 2.8
 
 ![wpn_groza_nimble_acog_hud]
         aim_hud_offset_pos               = 0.012918, -0.010408, -0.035528
@@ -87,7 +81,6 @@ scope_dynamic_zoom				 = off
 	s3ds_reticle_size 	= 4.2
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.35	
-	magnification 		= 4		
 	
 ![wpn_groza_nimble_wpn_addon_scope_po4x34_hud]
         aim_hud_offset_pos               = 0.013441, -0.035525, -0.018253
@@ -103,10 +96,6 @@ scope_texture                    =
 	s3ds_reticle_size 	= 4.9
 	s3ds_eye_relief 	= 3.1
 	s3ds_ffp			= 1	
-	s3ds_reticle_type 	= 2
-	ms_count 			= 2
-	ms_colors 			= scope_black, scope_red	
-	magnification 		= 24
 
 ![wpn_groza_nimble_marchf_hud]
         aim_hud_offset_pos               = 0.012687, -0.010033, 0.012724
@@ -130,10 +119,6 @@ scope_zoom_factor    = 12
 scope_dynamic_zoom   = on	
 
 	s3ds_reticle_size 	= 5
-	s3ds_image_type 	= 2
-	s3ds_reticle_type 	= 6
-	ms_count 			= 2
-	magnification 		= 10
 	
 [wpn_groza_nimble_gauss_sight_hud]:wpn_groza_nimble_hud
 item_visual				= anomaly_weapons\wpn_groza\wpn_groza_nimble_gauss_hud.ogf
@@ -158,11 +143,8 @@ scope_zoom_factor    = 15
 scope_dynamic_zoom   = on	
 
 	s3ds_reticle_size 	= 4.35
-	s3ds_eye_relief 	= 4
 	s3ds_exit_pupil		= 0.4	
 	s3ds_ffp			= 1	
-	magnification 		= 8
-    min_magnification	= 1
 	
 [wpn_groza_nimble_leupold_hud]:wpn_groza_nimble_hud
 item_visual				= anomaly_weapons\wpn_groza\wpn_groza_nimble_leupold_hud.ogf
