--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_mp5_nimble.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_mp5_nimble.ltx
@@ -16,7 +16,7 @@ lewd_lens_hide_aim_mode      = true, false, false
 
 ;==============================================================================
 ![wpn_mp5_nimble]
->scopes						 = specter, monstrum, trihawk, vulcan, t12
+>scopes						 = t12
 
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = flash
