--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_vector.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_vector.ltx
@@ -128,10 +128,15 @@ item_visual                              = dynamics\weapons\wpn_kriss_vector\wpn
 hud                                      = wpn_kriss_vector_t12_hud
 
 1icon_layer                              = t12
-1icon_layer_x                            = 35
-1icon_layer_y                            = -28
+1icon_layer_x                            = 105
+1icon_layer_y                            = -17
+
+s3ds_reticle_size 	= 2
 
 [wpn_kriss_vector_t12_hud]:wpn_kriss_vector_hud
 item_visual                              = dynamics\weapons\wpn_kriss_vector\wpn_kriss_vector_t12_hud.ogf
-	
+        aim_hud_offset_pos               = -0.076966, 0.038107, -0.085363
+        aim_hud_offset_pos_16x9          = -0.076966, 0.038107, -0.085363
+        aim_hud_offset_rot               = 0.032043, -0.024926, -0.01
+        aim_hud_offset_rot_16x9          = 0.032043, -0.024926, -0.01
 		
