--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_aug_freedom.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_aug_freedom.ltx
@@ -6,6 +6,10 @@ lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false	
 
+	s3ds_reticle_size = 4
+	s3ds_eye_relief = 4
+	s3ds_exit_pupil = 0.3
+	
 ![wpn_aug_freedom_acog]
 scope_zoom_factor        = 42.86
 scope_texture            =
@@ -13,9 +17,6 @@ scope_texture            =
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 1.5
 	s3ds_exit_pupil		= 0.55	
-	s3ds_chroma_power	= 0.031	
-	s3ds_reticle_type 	= 0
-	magnification 		= 2.8
 
 ![wpn_aug_freedom_acog_hud]
         aim_hud_offset_pos               = -0.059753, 0.02263, -0.14828
@@ -39,8 +40,6 @@ hud                         = wpn_aug_freedom_tac30_hud
 	s3ds_reticle_size 	= 4
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.4
-	s3ds_chroma_power	= 0.04	
-	magnification 		= 4		
 
 [wpn_aug_freedom_tac30_hud]:wpn_aug_freedom_hud
 item_visual                              = anomaly_weapons\wpn_aug_9mm\wpn_aug_9mm_tac30_hud.ogf
@@ -64,10 +63,7 @@ item_visual                              = anomaly_weapons\wpn_aug_9mm\wpn_aug_9
 	s3ds_reticle_size 	= 3
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.8
-	s3ds_reticle_type 	= 1
-	ms_count 			= 2
-	ms_colors 			= scope_black, scope_red	
-	magnification 		= 2		
+
 [wpn_aug_freedom_monstrum_hud]:wpn_aug_freedom_hud
 item_visual                              = anomaly_weapons\wpn_aug_9mm\wpn_aug_9mm_monstrum_hud.ogf
         aim_hud_offset_pos               = -0.058505, 0.029374, -0.121636
@@ -90,8 +86,7 @@ item_visual                              = anomaly_weapons\wpn_aug_9mm\wpn_aug_9
 	s3ds_reticle_size 	= 3.2
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.66
-	s3ds_chroma_power	= 0.028
-	magnification 		= 3		
+	
 [wpn_aug_freedom_trihawk_hud]:wpn_aug_freedom_hud
 item_visual                              = anomaly_weapons\wpn_aug_9mm\wpn_aug_9mm_trihawk_hud.ogf
         aim_hud_offset_pos               = -0.058383, 0.016, -0.096819
@@ -113,14 +108,9 @@ item_visual                              = anomaly_weapons\wpn_aug_9mm\wpn_aug_9
         scope_dynamic_zoom			= on
 		use_alt_aim_hud				= true
 		
-	s3ds_reticle_size 	= 4.5
+	s3ds_reticle_size 	= 6.1
 	s3ds_eye_relief 	= 2
-	s3ds_chroma_power	= 0.04	
-	s3ds_reticle_type 	= 4
-	ms_count 			= 3
-	ms_colors			= scope_black, scope_red_dim, scope_red
-	magnification 		= 4	
-    min_magnification	= 1	
+	
 [wpn_aug_freedom_specter_hud]:wpn_aug_freedom_hud
 item_visual                              = anomaly_weapons\wpn_aug_9mm\wpn_aug_9mm_specter_hud.ogf
         aim_hud_offset_alt_pos           = -0.059683, -0.011219, -0.094156
@@ -128,8 +118,8 @@ item_visual                              = anomaly_weapons\wpn_aug_9mm\wpn_aug_9
         aim_hud_offset_alt_rot           = 0.003053, 0.000331, 0
         aim_hud_offset_alt_rot_16x9      = 0.003053, 0.000331, 0
 		
-        aim_hud_offset_pos               = -0.058564, 0.020265, -0.14578
-        aim_hud_offset_pos_16x9          = -0.058564, 0.020265, -0.14578
+        aim_hud_offset_pos               = -0.058564, 0.020265, -0.148833
+        aim_hud_offset_pos_16x9          = -0.058564, 0.020265, -0.148833
         aim_hud_offset_rot               = 0.00496, -0.003786, 0
         aim_hud_offset_rot_16x9          = 0.00496, -0.003786, 0
 ;--------------------------------------------------------------------------------
@@ -149,12 +139,8 @@ item_visual                              = anomaly_weapons\wpn_aug_9mm\wpn_aug_9
 
 	s3ds_reticle_size 	= 3	
 	s3ds_eye_relief 	= 2
-	s3ds_exit_pupil		= 0.6	
-	s3ds_chroma_power	= 0.05	
-	s3ds_image_type 	= 1
-	s3ds_reticle_type	= 7
-	ms_count 			= 2
-	magnification 		= 3.5		
+	s3ds_exit_pupil		= 0.6
+	
 [wpn_aug_freedom_vulcan_hud]:wpn_aug_freedom_hud
 item_visual                              = anomaly_weapons\wpn_aug_9mm\wpn_aug_9mm_vulcan_hud.ogf
         aim_hud_offset_pos               = -0.059198, 0.02064, -0.128663
@@ -171,10 +157,7 @@ hud                                      = wpn_aug_freedom_t12_hud
 1icon_layer_y                            = -18
 
 	s3ds_reticle_size 	= 1.9
-	s3ds_image_type 	= 2
-	s3ds_reticle_type 	= 6
-	s3ds_min_zoom_1x	= 1	
-	magnification 		= 1
+	
 [wpn_aug_freedom_t12_hud]:wpn_aug_freedom_hud
 item_visual                              = anomaly_weapons\wpn_aug_9mm\wpn_aug_9mm_t12_hud.ogf
         aim_hud_offset_pos               = -0.058404, 0.024586, -0.087737
