--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_m249.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_m249.ltx
@@ -32,6 +32,8 @@ scope_texture                =
 scope_zoom_factor            = 30
 scope_dynamic_zoom		     = on
 
+zoom_step_count				 = 1
+
 [wpn_m249_specter_hud]:wpn_m249_hud,hud_low_interia
 item_visual                              = anomaly_weapons\wpn_m249\wpn_m249_specter_hud.ogf
         aim_hud_offset_alt_pos           = -0.093946, -0.028565, -0.146514
