--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_weapon_addons_meowie.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_weapon_addons_meowie.ltx
@@ -14,6 +14,7 @@ ps320                                        		= scope
 po434                                               = scope
 tac30                                        		= scope
 ado                                          		= scope
+echo1                                               = scope
 
 ;-----------------------------------------------------------------------------
 ;                               COLLIMATORS
@@ -234,3 +235,17 @@ inv_grid_height    = 1
 inv_grid_x         = 0
 inv_grid_y         = 5
 repair_type                                         = scope		
+
+[echo1]:addon
+visual				                                = dynamics\weapons\wpn_addon_world_models\wpn_case_weapon_small_world.ogf
+cost                		                        = 165000
+inv_name        		                            = st_addon_scope_echo1
+inv_name_short  		                            = st_addon_scope_echo1
+description    			                            = st_addon_scope_echo1_descr
+inv_weight        		                            = 0.6
+icons_texture                                       = ui\ui_icon_new_scopes_eft
+inv_grid_width     = 2
+inv_grid_height    = 1
+inv_grid_x         = 0
+inv_grid_y         = 6
+repair_type                                         = scope				
