change ps01m12 to POSP 6x scope

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_z_misc_changes.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_z_misc_changes.ltx
@@ -12,7 +12,13 @@ description    			                            = st_addon_scope_lazup_generic_des
 cost                		                        = 97490
 
 ![gauss_sight]
-cost                		                        = 293200
+cost                		                        = 253200
 
 ![wpn_addon_scope_pu]
 cost                		                        = 4950
+
+![pso1m21]
+cost                		                        = 9960
+inv_grid_x         = 0
+inv_grid_y         = 0
+icons_texture                                       = ui\ui_icon_posp
